--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   --github: #4078c0;
   --discord: #7289da;
   --google: #4285f4;
+  --nintendo: #e70012;
+  --xbox: #107c0f;
+  --playstation: #05428b;
 }
 
 * {
@@ -155,6 +158,7 @@ Link {
 
 .focus-shadow:focus {
   box-shadow: 0 0 10px var(--gold);
+  border: none;
   transition: 500ms;
 }
 
@@ -223,6 +227,24 @@ Link {
 
 .nav-link {
   font-family: 'Cinzel', sans-serif;
+}
+
+.nav-link:hover {
+  color: white;
+  text-shadow:
+    2px 2px 1px rgba(0, 0, 0, 0.5),
+    0 0 5px #fff,
+    0 0 10px var(--gold),
+    0 0 20px var(--gold);
+  transition: 0.5s;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.offcanvas {
+  width: 90%;
 }
 
 .presto {
@@ -398,7 +420,38 @@ Link {
   margin-left: 40px;
 }
 
+input[type='file'] + label {
+  display: none;
+}
+
+.fa-circle-user {
+  font-size: 250px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .img-avatar {
+  width: 250px;
+}
+
+.img-avatar-nav {
+  width: 40px;
+}
+
+.avatar-nav-box {
+  width: 40px;
+  height: 40px;
+}
+
+.img-avatar-chat {
+  width: 45px;
+}
+
+.avatar-chat-box {
+  width: 45px;
+  height: 45px;
+}
+
+.avatar-box {
   height: 250px;
   width: 250px;
 }
@@ -474,6 +527,7 @@ Link {
   color: var(--gold);
   box-shadow: 0 0 15px var(--github);
   text-shadow: 0 0 15px var(--github);
+  transform: scale(1.05);
 }
 
 .btn-discord {
@@ -486,6 +540,7 @@ Link {
   color: var(--gold);
   box-shadow: 0 0 15px var(--discord);
   text-shadow: 0 0 15px var(--discord);
+  transform: scale(1.05);
 }
 
 .btn-google {
@@ -498,6 +553,7 @@ Link {
   color: var(--gold);
   box-shadow: 0 0 15px var(--google);
   text-shadow: 0 0 15px var(--google);
+  transform: scale(1.05);
 }
 
 .game-list-button,
@@ -531,6 +587,20 @@ input[type='file']::-webkit-file-upload-button:hover {
   color: var(--gold);
   box-shadow: 0 0 15px var(--gold);
   text-shadow: 0 0 15px var(--gold);
+}
+
+/*//* PAGINATION -------------------------------- */
+
+.pagination-up:hover {
+  animation:
+    slide-right 3.2s ease-in-out infinite alternate-reverse both,
+    neon 1.5s infinite alternate;
+}
+
+.pagination-down:hover {
+  animation:
+    slide-left 3.2s ease-in-out infinite alternate-reverse both,
+    neon 1.5s infinite alternate;
 }
 
 /*//* FILTER ------------------------------------ */
@@ -639,6 +709,198 @@ input[type='file']::-webkit-file-upload-button:hover {
 
 .gamesintime-logo {
   height: 150px;
+}
+
+/*//* LIVE CHAT ------------------------------- */
+
+.chat-container {
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 15px;
+}
+
+.messages {
+  height: 450px;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth !important;
+}
+
+.other-user-message {
+  /* border: solid 1px rgba(255, 255, 255, 0.3); */
+  border-radius: 10px 10px 10px 0px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.session-user-message {
+  border-radius: 10px 10px 0px 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+  /* background-color: rgba(0, 0, 0, 0.6); */
+}
+
+/*//* CHAT INPUT ---------------------------  */
+
+.chat-input {
+  width: 100%;
+  height: 33px;
+}
+
+.timestamps {
+  margin: 20px 0 0 0;
+  padding: 0;
+  font-size: 10px;
+  color: gray;
+  text-align: right;
+}
+
+.message-form-wrapper {
+  margin-top: 25px;
+}
+
+.message-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat-container {
+  width: 100%;
+}
+
+/*//* REVIEWS ------------------------------- */
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+figure.snip1390 {
+  font-family: 'Roboto', Arial, sans-serif;
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+  min-width: 230px;
+  max-width: 315px;
+  width: 100%;
+  color: #000000;
+  text-align: center;
+  font-size: 16px;
+  background-color: #2c3447;
+  padding: 30px;
+  background-image: linear-gradient(
+    -25deg,
+    rgba(0, 0, 0, 0.2) 0%,
+    rgba(255, 255, 255, 0.1) 100%
+  );
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+figure.snip1390 *,
+figure.snip1390 *:before,
+figure.snip1390 *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+figure.snip1390 figcaption {
+  width: 100%;
+}
+figure.snip1390 h2,
+figure.snip1390 h4,
+figure.snip1390 blockquote {
+  margin: 0;
+}
+figure.snip1390 h2,
+figure.snip1390 h4 {
+  font-weight: 300;
+}
+figure.snip1390 h2 {
+  color: #ffffff;
+}
+figure.snip1390 h4 {
+  color: #a6a6a6;
+}
+figure.snip1390 blockquote {
+  font-size: 1em;
+  padding: 45px 20px 40px 50px;
+  margin-top: 30px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: inset -1.4px -1.4px 2px rgba(0, 0, 0, 0.3);
+  text-align: left;
+  position: relative;
+}
+figure.snip1390 blockquote:before {
+  font-family: 'FontAwesome';
+  content: '\201C';
+  position: absolute;
+  font-size: 70px;
+  opacity: 0.25;
+  font-style: normal;
+  top: 0px;
+  left: 20px;
+}
+figure.snip1390 .profile {
+  width: 100px;
+  border-radius: 50%;
+  display: inline-block;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.4);
+  margin-bottom: 10px;
+  border: solid 5px #a6a57a;
+}
+
+.review-comment-form {
+  width: 100%;
+  height: fit-content;
+}
+
+.review-comment {
+  width: 100%;
+  height: 200px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.review-carousel {
+  width: 100%;
+}
+
+/*//* BUTTON -------------------------------- */
+
+.button-chat {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 60px;
+  background: white;
+  border-radius: 50%;
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.7);
+  transition: 0.5s;
+}
+
+.button-chat:before {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--gold);
+  transition: 0.5s;
+  transform: scale(0.9);
+  z-index: -1;
+}
+
+.button-chat:hover:before {
+  transform: scale(1.2);
+  box-shadow: 0 0 15px var(--gold);
+  filter: blur(3px);
+}
+
+.button-chat:hover {
+  color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 15px var(--gold);
+  text-shadow: 0 0 15px var(--gold);
 }
 
 /*//* SOCIAL ---------------------------------- */
@@ -771,6 +1033,15 @@ input[type='file']::-webkit-file-upload-button:hover {
     height: 40px;
     font-size: 16px;
   }
+
+  .img-avatar-chat {
+    width: 35px;
+  }
+
+  .avatar-chat-box {
+    width: 35px;
+    height: 35px;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -788,9 +1059,22 @@ input[type='file']::-webkit-file-upload-button:hover {
     margin-left: 80px;
     margin-right: 80px;
   }
+
+  .img-avatar-chat {
+    width: 45px;
+  }
+
+  .avatar-chat-box {
+    width: 45px;
+    height: 45px;
+  }
 }
 
 @media screen and (max-width: 991px) {
+  html {
+    overflow-x: hidden !important;
+  }
+
   .trailer {
     background-position: -600px;
   }
@@ -839,6 +1123,15 @@ input[type='file']::-webkit-file-upload-button:hover {
 
   .gamesintime-logo {
     height: 120px;
+  }
+
+  .img-avatar-chat {
+    width: 35px;
+  }
+
+  .avatar-chat-box {
+    width: 35px;
+    height: 35px;
   }
 }
 
@@ -936,6 +1229,58 @@ input[type='file']::-webkit-file-upload-button:hover {
   }
 }
 
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+
+  50% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+
+  75% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  25% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
+
+  50% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+
+  75% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+}
+
 @keyframes arrow {
   0% {
     transform: translateY(0);
@@ -980,4 +1325,8 @@ input[type='file']::-webkit-file-upload-button:hover {
   0% {
     color: white;
   }
+}
+
+body {
+  overflow-x: hidden !important;
 }
