--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --github: #4078c0;
   --discord: #7289da;
   --google: #4285f4;
-  --nintendo: #e70012;
-  --xbox: #107c0f;
+  --nintendo: rgb(231, 0, 18);
+  --xbox: rgb(16, 124, 15);
   --playstation: #05428b;
 }
 
@@ -26,7 +26,6 @@ body {
   background-position: top;
 
   backdrop-filter: blur(0px);
-
   overflow-x: hidden !important;
 }
 
@@ -138,6 +137,18 @@ Link {
 
 .box-shadow-gold {
   box-shadow: 0 0 9px 3px var(--gold);
+}
+
+.box-shadow-playstation {
+  box-shadow: 0 0 9px 3px var(--playstation);
+}
+
+.box-shadow-xbox {
+  box-shadow: 0 0 9px 3px var(--xbox);
+}
+
+.box-shadow-nintendo {
+  box-shadow: 0 0 9px 3px var(--nintendo);
 }
 
 .neon {
@@ -362,20 +373,26 @@ Link {
 }
 
 .game-card {
-  background: linear-gradient(45deg, transparent 5%, rgb(5, 66, 139) 5%);
   border: 0;
   color: #fff;
-  box-shadow: 6px -6px 0px var(--gold);
   outline: transparent;
   height: max-content;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-.xbox-game-card {
-  background: linear-gradient(45deg, transparent 5%, #107c0f 5%);
+.playstation-game-card:hover {
+  background: rgba(5, 66, 139, 0.6);
+  transition: 0.5s;
 }
 
-.switch-game-card {
-  background: linear-gradient(45deg, transparent 5%, #e70012 5%);
+.xbox-game-card:hover {
+  background: rgba(16, 124, 15, 0.6);
+  transition: 0.5s;
+}
+
+.nintendo-game-card:hover {
+  background: rgba(231, 0, 18, 0.6);
+  transition: 0.5s;
 }
 
 .profile-card {
@@ -622,7 +639,7 @@ input[type='file']::-webkit-file-upload-button:hover {
 /*//* TRAILER ----------------------------------- */
 
 .trailer {
-  background-image: url('src/assets/Elden-Ring-background-Erdtree.webp');
+  background-image: url('src/assets/Elden-Ring-background-Erdtree-transparent.png');
   background-position: top;
   background-repeat: none;
   background-size: cover;
@@ -720,6 +737,9 @@ input[type='file']::-webkit-file-upload-button:hover {
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   border-radius: 25px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 490px;
 }
 
 /*//* LIVE CHAT ------------------------------- */
@@ -782,7 +802,13 @@ input[type='file']::-webkit-file-upload-button:hover {
 
 /*//* REVIEWS ------------------------------- */
 
-div.snip1390 {
+.mySwiper {
+  height: 430px;
+  padding: 0px !important;
+  margin-top: 20px;
+}
+
+.snip1390 {
   min-width: 230px;
   max-width: 315px;
   width: 100%;
@@ -796,27 +822,21 @@ div.snip1390 {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-div.snip1390 *,
-div.snip1390 *:before,
-div.snip1390 *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-
-div.snip1390 figcaption {
+.snip1390 figcaption {
   width: 100%;
+  height: 218px;
 }
 
 .blockquote {
+  height: 120px;
   border: 2px solid black;
   background-color: rgba(0, 0, 0, 0.4);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .review-comment-form {
   width: 100%;
-  height: fit-content;
 }
 
 .review-comment {
@@ -840,7 +860,7 @@ div.snip1390 figcaption {
   background-position: center;
   background-size: cover;
   width: 300px;
-  height: 300px;
+  height: 358px;
 }
 
 /*//* BUTTON -------------------------------- */
@@ -987,21 +1007,15 @@ div.snip1390 figcaption {
 
 /* Stile generale della barra di scorrimento */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
   position: absolute;
   right: 10px;
 }
-
 /* Stile del pollice della barra di scorrimento */
 ::-webkit-scrollbar-thumb {
   background-color: #888;
-  border-radius: 6px;
+  border-radius: 25px;
   border: solid 4px transparent;
-}
-
-/* Stile di trascinamento del pollice della barra di scorrimento */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
 }
 
 /*//* MEDIA SCREEN ------------------------------ */
@@ -1145,6 +1159,14 @@ div.snip1390 figcaption {
 }
 
 /*//* ANIMAZIONI -------------------------------- */
+
+.fade-in-up {
+  animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+}
+
+.fade-in {
+  animation: fadeIn 1s ease 0s normal both;
+}
 
 @keyframes fadeInUp {
   0% {
